Predictive search scroll issue on iOS

--- a/assets/base.css
+++ b/assets/base.css
@@ -2051,6 +2051,8 @@ details[open] .modal-overlay::after {
   left: 0;
   right: 0;
   height: 100vh;
+  touch-action: none;
+
 }
 
 .no-js details[open] > .header__icon--search {
